SimGrid (3.8.1) NOT RELEASED; urgency=low

 (to complete)

 -- $date Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>

SimGrid (3.8) stable; urgency=low

 The Psssshiiiit release: SimGrid jumps into the Cloud.

 MSG:
 * Add an experimental interface to manipulate VMs. They are mainly
   process groups with very few intrinsic semantic, but they should
   allow you to build the semantic you want easily.
 * New function: MSG_host_set_property_value()
 * New function: MSG_process_on_exit(). To clean memory in all cases.
 * Bug fixes that made the host (and link) failures unusable.
 * Add a way to auto-restart process when the host in which they are
   executing comes back (ON_FAILURE="RESTART" on deployment file,
   MSG_process_auto_restart_set).
 * Use the "msg_" prefix for all datatypes (instead of m_, msg_ and MSG_),
   please stop using the old ones, they are DEPRECATED.

 * Deprecate functions MSG_global_init() / MSG_global_init_args()
   Please use MSG_init() instead. (reducing the amount of entry
   points in the library helps us).
 * Make it impossible to link against the wrong version of the lib
 * Deprecate MSG_clean(). No need to call it anymore.
 * Function MSG_get_host_number() is not deprecated anymore.

 Documentation:
 * Split the doc into a user guide and a reference guide.
 * Start a developper guide to help people hacking on SimGrid.

 Cmake:
 * Enable tracing by default. This modules rocks you should use it.
 * Remove option custom_flags. Now use environment variables CFLAGS
   and LDFLAGS.
 * Use default cmake things to detect lua instead of home grown ones.
 * New option "enable_mallocators" to disable mallocators, for debugging
   purpose ("on" by default).

 Simix:
 * Bug fixes around the resource failures: don't let the processes
   survive the host they are running onto.
 * Add an interface to auto-restart processes when the host in which they are
   executing comes back.